--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,10 +1,10 @@
 <jhi-page-ribbon></jhi-page-ribbon>
 
 <div class="background">
-  <div>
+  <div role="navigation">
     <router-outlet name="navbar"></router-outlet>
   </div>
-  <div class="container-fluid">
+  <div class="container-fluid" role="main">
     <div class="card jh-card">
       <router-outlet></router-outlet>
     </div>
