--- a/src/main/webapp/app/carousel/carousel.component.scss
+++ b/src/main/webapp/app/carousel/carousel.component.scss
@@ -16,6 +16,8 @@
 .carousel-slide {
   display: none;
   transition: opacity 0.5s;
+  width: 100%;
+  height: auto;
 }
 
 .carousel-slide.active {
@@ -24,7 +26,8 @@
 
 .carousel img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  max-height: 60vh;
 }
 
 .carousel-prev,
